Fixed Home page's club names overlapping mobile responsive(?)

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -117,7 +117,6 @@
 
 .home-club-name {
   position: relative;
-  white-space: nowrap;
   margin: -55px 0px 0px -10%;
   font-weight: bold;
   font-size: 1.5rem;
